[gd_scene load_steps=9 format=2]

[ext_resource path="res://world/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://SceneManager.gd" type="Script" id=2]
[ext_resource path="res://world/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/Dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://load_battle_scene.gd" type="Script" id=5]
[ext_resource path="res://transition/Transition.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_fading"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToNormal"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="SceneManager" type="Node2D"]
script = ExtResource( 2 )

[node name="CurrentScene" type="Node2D" parent="."]

[node name="World" parent="CurrentScene" instance=ExtResource( 1 )]

[node name="Menu" parent="." instance=ExtResource( 3 )]

[node name="Dialogue" parent="." instance=ExtResource( 4 )]
visible = false

[node name="battle_scene" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="Transition" parent="." instance=ExtResource( 6 )]

[node name="ScreenTransition" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ScreenTransition"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition"]
anims/FadeToBlack = SubResource( 1 )
anims/FadeToNormal = SubResource( 2 )
